[gd_scene load_steps=32 format=3 uid="uid://cqi243nd2cst6"]

[ext_resource type="Script" path="res://npcnode.gd" id="1_kicyy"]
[ext_resource type="Texture2D" uid="uid://bn8dfp6jh8vkp" path="res://Sprites/NPCs/Boy/boy-32-64-idele.png" id="2_gs6ob"]
[ext_resource type="Texture2D" uid="uid://cx8q5rcsugh0w" path="res://Sprites/NPCs/CyberpunkStyle/1 Biker/Biker_idle.png" id="3_h3ykw"]
[ext_resource type="Texture2D" uid="uid://dpr8wl403toev" path="res://Sprites/NPCs/CyberpunkStyle/2 Punk/Punk_idle.png" id="4_yvji7"]
[ext_resource type="Texture2D" uid="uid://jeqeia04xgce" path="res://Sprites/NPCs/Gangsters/Gangsters_3/Idle.png" id="5_lyfxu"]
[ext_resource type="Texture2D" uid="uid://cd4ecvpjxfxdx" path="res://Sprites/NPCs/Gangsters/Gangsters_2/Idle.png" id="6_821uf"]
[ext_resource type="Texture2D" uid="uid://bha1d3yowlgx5" path="res://Sprites/NPCs/AdventureStyle/3 SteamMan/SteamMan_idle.png" id="7_2eyp0"]
[ext_resource type="Texture2D" uid="uid://t1ns52u33i8i" path="res://Sprites/NPCs/Guy with Backpack/_side idle.png" id="8_2j226"]

[sub_resource type="Animation" id="Animation_n3lxg"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25, 0.75, 1.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_f2q4o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67r1e"]
_data = {
"Idle": SubResource("Animation_n3lxg"),
"RESET": SubResource("Animation_f2q4o")
}

[sub_resource type="Animation" id="Animation_xqhrx"]
resource_name = "Idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_0tp4b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3eu1"]
_data = {
"Idle": SubResource("Animation_xqhrx"),
"RESET": SubResource("Animation_0tp4b")
}

[sub_resource type="Animation" id="Animation_i1ni5"]
resource_name = "Idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hbolr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqk1y"]
_data = {
"Idle": SubResource("Animation_i1ni5"),
"RESET": SubResource("Animation_hbolr")
}

[sub_resource type="Animation" id="Animation_32bjr"]
resource_name = "Idle"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_8l1kk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_03a7a"]
_data = {
"Idle": SubResource("Animation_32bjr"),
"RESET": SubResource("Animation_8l1kk")
}

[sub_resource type="Animation" id="Animation_kkn32"]
resource_name = "Idle"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 5, 6]
}

[sub_resource type="Animation" id="Animation_40q3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ueqt"]
_data = {
"Idle": SubResource("Animation_kkn32"),
"RESET": SubResource("Animation_40q3y")
}

[sub_resource type="Animation" id="Animation_yn65v"]
resource_name = "Idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_3wehu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18eoe"]
_data = {
"Idle": SubResource("Animation_yn65v"),
"RESET": SubResource("Animation_3wehu")
}

[sub_resource type="Animation" id="Animation_3wm84"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_r17b6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqqna"]
_data = {
"Idle": SubResource("Animation_3wm84"),
"RESET": SubResource("Animation_r17b6")
}

[sub_resource type="Theme" id="Theme_w7vb1"]
default_font_size = 27

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mr5tc"]
size = Vector2(9.59999, 40.6)

[node name="NPCnode" type="Node2D" groups=["NPC"]]
position = Vector2(508, 500)
scale = Vector2(5, 5)
script = ExtResource("1_kicyy")

[node name="Boy" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_gs6ob")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boy"]
libraries = {
"": SubResource("AnimationLibrary_67r1e")
}
autoplay = "Idle"

[node name="Biker" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(20, -12)
scale = Vector2(1.4, 1.4)
texture = ExtResource("3_h3ykw")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Biker"]
libraries = {
"": SubResource("AnimationLibrary_m3eu1")
}
autoplay = "Idle"

[node name="Punk" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(20, -12)
scale = Vector2(1.4, 1.4)
texture = ExtResource("4_yvji7")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Punk"]
libraries = {
"": SubResource("AnimationLibrary_tqk1y")
}
autoplay = "Idle"

[node name="Gangster3" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -25)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_lyfxu")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gangster3"]
libraries = {
"": SubResource("AnimationLibrary_03a7a")
}
autoplay = "Idle"

[node name="Gangster2" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -25)
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_821uf")
hframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gangster2"]
libraries = {
"": SubResource("AnimationLibrary_4ueqt")
}
autoplay = "Idle"

[node name="Tophat" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -12)
scale = Vector2(1.4, 1.4)
texture = ExtResource("7_2eyp0")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tophat"]
libraries = {
"": SubResource("AnimationLibrary_18eoe")
}
autoplay = "Idle"

[node name="Backpack" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -2)
scale = Vector2(1.6, 1.6)
texture = ExtResource("8_2j226")
hframes = 4
vframes = 2
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Backpack"]
libraries = {
"": SubResource("AnimationLibrary_rqqna")
}
autoplay = "Idle"

[node name="SpeechBubble" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -29.0
offset_top = -47.0
offset_right = 415.0
offset_bottom = 78.0
scale = Vector2(0.2, 0.2)

[node name="Label" type="Label" parent="SpeechBubble"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.451
offset_top = -1.0
offset_right = 1.563
theme = SubResource("Theme_w7vb1")
text = "..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.2, 2.9)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_mr5tc")
